examples/type_system/failing/30_strict_public_unannotated_effectful.flx
// parity-expected-stdout-begin
// "strict mode"
// parity-expected-stdout-end
// expect: compile_error

public fn log(msg) {
    print(msg)
}

fn main() -> Unit with IO {
    log("strict mode")
}
